--- a/components/sections/Home/Banner.module.scss
+++ b/components/sections/Home/Banner.module.scss
@@ -6,10 +6,11 @@
 
 .text {
   text-align: center;
-  margin-bottom: 4rem;
+
+  margin: 4rem;
 
   h2 {
-    font-size: 1.75rem;
+    font-size: 2rem;
     font-weight: 700;
     color: #1a202c;
     margin-bottom: 0.5rem;
