--- a/components/sections/Home/Services.module.scss
+++ b/components/sections/Home/Services.module.scss
@@ -1,6 +1,8 @@
+@use "../../../styles//colors" as *;
+
 .services {
   padding: 4rem 1rem;
-  background-color: #f9f9f9;
+  background-color: $color-bg-light;
   text-align: center;
 }
 
@@ -23,7 +25,7 @@
 .grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 2rem;
+  gap: 3rem;
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 1rem;
