--- a/components/common/Metrics.module.scss
+++ b/components/common/Metrics.module.scss
@@ -2,7 +2,7 @@
 
 .metricsSection {
   padding: 4rem 1rem;
-  background: linear-gradient(135deg, $color-primary-start, $color-primary-end);
+  background: linear-gradient(135deg, $color-secondary-start, $color-secondary-end);
   text-align: center;
   color: white;
 }
