--- a/components/sections/Home/Hero.module.scss
+++ b/components/sections/Home/Hero.module.scss
@@ -133,3 +133,10 @@
     transform: translateY(-5px);
   }
 }
+
+// Hide hero image on mobile screens
+@media (max-width: 768px) {
+  .image {
+    display: none;
+  }
+}
