--- a/components/sections/Services/ServiceHero.module.scss
+++ b/components/sections/Services/ServiceHero.module.scss
@@ -102,3 +102,10 @@
     transform: translateY(-5px);
   }
 }
+
+// Hide hero image on mobile screens
+@media (max-width: 768px) {
+  .imageWrapper {
+    display: none;
+  }
+}
