--- a/components/sections/Home/Services.module.scss
+++ b/components/sections/Home/Services.module.scss
@@ -1,4 +1,4 @@
-@use "../../../styles//colors" as *;
+@use "../../../styles/colors" as *;
 
 .services {
   padding: 4rem 1rem;
@@ -12,13 +12,13 @@
   h2 {
     font-size: 2rem;
     font-weight: 700;
-    color: #1a202c;
+    color: $color-text-dark;
     margin-bottom: 0.5rem;
   }
 
   p {
     font-size: 1.1rem;
-    color: #4a5568;
+    color: rgba($color-text-dark, 0.7);
   }
 }
 
